--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "src/assets/js/custom-script.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
